--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,20 @@
 {
-    "version":2,
-    "builds":[
+  "version": 2,
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "installCommand": "npm install",
+  "functions": {
+    "src/server.ts": {
+      "runtime": "@vercel/node@3"
+    }
+  },
+  "routes": [
     {
-    "src":"src/server.ts",  
-    "use":"@vercel/node"
+      "src": "/(.*)",
+      "dest": "src/server.ts"
     }
-    ],
-    "routes":[
-    {
-    "src":"/(.*)",
-       "dest": "/server.js"
-    }
-    ]
-    }
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
+}
