--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "description": "Backend API for AI-powered debate platform",
   "main": "dist/server.js",
   "scripts": {
-    "dev": "nodemon src/server.ts",
-    "dev:js": "nodemon --exec \"node -r ts-node/register\" src/server.ts",
-    "build": "tsc",
-    "start": "node dist/server.js",
-    "test": "jest",
-    "lint": "eslint src/**/*.ts",
-    "format": "prettier --write src/**/*.ts"
+  "start": "nodemon src/server.ts",
+  "build": "rimraf dist && tsc",
+  "ts.check": "tsc --project tsconfig.json",
+  "add-build": "git add dist",
+  "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "debate",
