--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Backend API for AI-powered debate platform",
   "main": "dist/server.js",
   "scripts": {
-  "start": "nodemon src/server.ts",
-  "build": "rimraf dist && tsc",
-  "ts.check": "tsc --project tsconfig.json",
-  "add-build": "git add dist",
-  "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/server.ts",
+    "dev:js": "nodemon --exec \"node -r ts-node/register\" src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "test": "jest",
+    "lint": "eslint src/**/*.ts",
+    "format": "prettier --write src/**/*.ts"
   },
   "keywords": [
     "debate",
