--- a/package.json
+++ b/package.json
@@ -2,15 +2,9 @@
   "name": "debate-platform-backend",
   "version": "1.0.0",
   "description": "Backend API for AI-powered debate platform",
-  "main": "dist/server.js",
+  "main": "index.ts",
   "scripts": {
-    "dev": "nodemon src/server.ts",
-    "dev:js": "nodemon --exec \"node -r ts-node/register\" src/server.ts",
-    "build": "tsc",
-    "start": "node dist/server.js",
-    "test": "jest",
-    "lint": "eslint src/**/*.ts",
-    "format": "prettier --write src/**/*.ts"
+    "dev": "nodemon index.ts"
   },
   "keywords": [
     "debate",
