--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "lib": ["ES2020"],
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": "",
     "strict": true,
     "noImplicitReturns": false,
     "esModuleInterop": true,
@@ -29,7 +29,7 @@
   "include": [
     "src/**/*",
     "src/types/**/*.d.ts"
-  ],
+, "index.ts"  ],
   "exclude": [
     "node_modules",
     "dist",
