--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
     "target": "ES2020",
     "module": "commonjs",
     "lib": ["ES2020"],
-    "outDir": "dist",
-    "rootDir": "",
+    "outDir": "./dist",
+    "rootDir": "./src",
     "strict": true,
     "noImplicitReturns": false,
     "esModuleInterop": true,
@@ -29,7 +29,7 @@
   "include": [
     "src/**/*",
     "src/types/**/*.d.ts"
-, "index.ts"  ],
+  ],
   "exclude": [
     "node_modules",
     "dist",
